# ob

./: .gitignore  ASAN-LEAKS.md  CHECKLIST.md  HACKING.md  README.GIT  README.md  TODO.md  YAML_CONFIG.md  bootstrap  checklist.md  ctags.funcs.json  gdb_commands.txt  gettext.h  lsan.supp  meson.build  meson_options.txt  tags  test_checklist.md
.github/: lsan.supp
.github/workflows/: c-cpp.yml
data/: environment  menu.xml  menu.yaml  menu.yml  meson.build  openbox.desktop  rc.xml  rc.xsd  rc.yaml  rc.yml  xml2yaml.py
data/autostart/: autostart.in  openbox-xdg-autostart
doc/: meson.build  obxprop.1.in  obxprop.1.sgml  openbox-gnome-session.1.in  openbox-gnome-session.1.sgml  openbox-session.1.in  openbox-session.1.sgml  openbox.1.in  openbox.1.sgml  rc-mouse-focus.xml
obrender/: button.c  color.c  color.h  font.c  font.h  geom.h  gradient.c  gradient.h  icon.h  image.c  image.h  imagecache.c  imagecache.h  instance.c  instance.h  mask.c  mask.h  meson.build  render.c  render.h  theme.c  theme.h
obt/: bsearch.h  ddparse.c  ddparse.h  display.c  display.h  keyboard.c  keyboard.h  link.h  meson.build  obtyaml.c  obtyaml.h  paths.c  paths.h  prop.c  prop.h  signal.c  signal.h  unittest_base.h  util.h  xml.c  xml.h  xqueue.c  xqueue.h
obt/tests/: ddtest.c  watchtest.c
openbox/: actions.c  actions.h  client.c  client.h  client_list_combined_menu.c  client_list_menu.c  client_menu.c  config.c  config.h  debug.c  debug.h  dock.c  dock.h  event.c  event.h  focus.c  focus.h  focus_cycle.c  focus_cycle.h  focus_cycle_indicator.c  focus_cycle_indicator.h  focus_cycle_popup.c  focus_cycle_popup.h  frame.c  frame.h  framerender.c  framerender.h  geom.h  grab.c  grab.h  group.c  group.h  keyboard.c  keyboard.h  keytree.c  keytree.h  menu.c  menu.h  menuframe.c  menuframe.h  (+31 more)
openbox/actions/: addremovedesktop.c  breakchroot.c  close.c  cyclewindows.c  debug.c  decorations.c  desktop.c  directionalwindows.c  dock.c  dockautohide.c  execute.c  exit.c  focus.c  focustobottom.c  fullscreen.c  growtoedge.c  helpers.c  helpers.h  iconify.c  if.c  kill.c  layer.c  lower.c  maximize.c  move.c  moverelative.c  moveresizeto.c  movetoedge.c  omnipresent.c  raise.c  raiselower.c  reconfigure.c  resize.c  resizerelative.c  restart.c  shade.c  shadelowerraise.c  showdesktop.c  showmenu.c  unfocus.c
openbox/x11/: meson.build  x11.c  x11.h
po/: af.po  ar.po  be.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en@boldquot.po  en@quot.po  es.po  et.po  eu.po  fi.po  fr.po  gl_ES.po  he.po  hr.po  hu.po  ia.po  it.po  ja.po  lt.po  lv.po  nl.po  no.po  openbox.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  vi.po  (+2 more)
release/: go
tests/: aspect.c  big.c  borderchange.c  confignotify.c  confignotifymax.c  cursorio.c  duplicatesession.c  extentsrequest.c  fakeunmap.c  fallback.c  focusout.c  fullscreen.c  grav.c  groupmodal.c  grouptran.c  grouptran2.c  grouptrancircular.c  grouptrancircular2.c  hidpi.c  iconifydelay.c  icons.c  mapiconic.c  meson.build  mingrow.c  modal.c  modal2.c  modal3.c  noresize.c  oldfullscreen.c  override.c  overrideinputonly.c  positioned.c  resize.c  restack.c  run-x11-regressions.sh.in  shape.c  showhide.c  skiptaskbar.c  skiptaskbar2.c  stackabove.c  (+9 more)
tools/: meson.build
tools/gdm-control/: gdm-control.c
tools/gnome-panel-control/: gnome-panel-control.c
tools/obpanel/: README.md  meson.build  obpanel.c
tools/obxprop/: obxprop.c
