option('startup_notification', type: 'feature', value: 'auto',
       description: 'Enable libstartup-notification support')
option('xcursor', type: 'feature', value: 'auto',
       description: 'Enable Xcursor support')
option('imlib2', type: 'feature', value: 'auto',
       description: 'Enable Imlib2 for icon loading')
option('librsvg', type: 'feature', value: 'auto',
       description: 'Enable librsvg for SVG icon loading')
option('xdamage', type: 'feature', value: 'auto',
       description: 'Enable XDamage extension support')
option('session_management', type: 'feature', value: 'auto',
       description: 'Enable X11 session management (libSM/libICE)')
option('rendertest', type: 'boolean', value: false,
       description: 'Build the obrender/rendertest diagnostic tool')
option('default_theme', type: 'string', value: 'Mikachu',
       description: 'Default Openbox theme compiled into libobrender')
